<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/login_logo_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/gasparin_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/email_login_input"
        android:hint="@string/login_email_placeholder"
        android:inputType="textEmailAddress"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login_logo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/password_login_input"
        android:layout_marginTop="32dp"/>

    <EditText
        android:id="@+id/password_login_input"
        android:hint="@string/login_password_placeholder"
        android:inputType="textPassword"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email_login_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:text="@string/login_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_login_input"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>